2000-12-04 John R. Jackson  <jrj@purdue.edu>

	* server-src/conffile.c (read_conffile_recursively): If the file name
	  for the includefile directive is not absolute, make it relative to
	  the configuration directory.

2000-12-03 John R. Jackson  <jrj@purdue.edu>

	* restore-src/amrestore.c: Fix header when compression is included.
	  Use "fast" option for -c and add new -C option to get "best".
	* man/amrestore.8: Document the new option, the compression level,
	  and clean up some nroff issues.

2000-11-30 Marc Mengel <mengel@fnal.gov>
	* changer-src/chg-chio.pl.in: Use am-mt and am-dd versus mt and dd.
	* changer-src/chg-chs.sh.in: Likewise.
	* changer-src/chg-manual.sh.in: Likewise.
	* changer-src/chg-mtx.sh.in: Likewise.
	* changer-src/chg-multi.sh.in: Likewise.
	* changer-src/chg-rth.pl.in: Likewise.
	* changer-src/chg-zd-mtx.sh.in:  Likewise.
	* tape-src/am-dd.c: New file. Replacement for dd.
	* tape-src/am-mt.c: New file. replacement for mt.
	* tape-src/Makefile.am: Add build for am-mt and am-dd.
	* tape-src/tapeio.c (tape_unload, tapefd_unload, tape_status, 
	  tapefd_status): New functions.
          (tape_rewind, tape_fsf, tape_rdlabel): Change error message 
		for tape being offline so it matches online/offline regex 
		in changer scripts.
	  (tape_open): Ifdef-out mode flag clearing, so you can pass 
		O_TRUNC, etc.  in for am-dd.

2000-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/util.c: #include "../tape-src/tapeio.h"
	* tape-src/tapeio.c(tapefd_write): second arg is const.
	* tape-src/tapeio.h(tapefd_write): Likewise.
	* common-src/event.c(event_loop): declare entry if ASSERT is defined.
	* changer-src/chg-scsi.c: Fix compiler warning.
	* changer-src/scsi-aix.c: Likewise.
	* changer-src/scsi-bsd.c: Likewise.
	* changer-src/scsi-cam.c: Likewise.
	* changer-src/scsi-changer-driver.c: Likewise.
	* changer-src/scsi-defs.h: Likewise.
	* changer-src/scsi-hpux.c: Likewise.
	* changer-src/scsi-hpux_new.c: Likewise.